fixed summary header spacing

--- a/src/styles/Summary.css
+++ b/src/styles/Summary.css
@@ -11,13 +11,18 @@
 }
 
 .summary-header {
+  position: static;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   width: 100%;
-  max-width: 1200px;
-  margin-top: 60px;
+  max-width: 1600px;
+  margin-top: 80px;
   margin-bottom: 40px;
+  padding: 1rem;
+  border-bottom: 5px solid #898e95;
+  gap: 1rem;
+  z-index: 1;
 }
 
 .summary-title {
@@ -29,7 +34,7 @@
   font-weight: 400;
   line-height: 120%;
   letter-spacing: -1.28px;
-  margin: 0;
+  margin: 0px;
 }
 
 .summary-title .item-count {
